src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>ActivityColor__c</fullName>
        <label>ActivityColor</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityType__c</fullName>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Note</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CallDisposition__c</fullName>
        <label>Call Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>Phone Attempt 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Attempt 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Attempt 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Attempt 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Attempt 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Attempt 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Follow Up EC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Follow Up AEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live Call-AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live Call- AR Live Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live Call- AR Set Appt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live Call- EC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live Call- No Appt Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC Recommendation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Follow Up- Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Phone Number</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CallorApptTime__c</fullName>
        <description>Time of Call or Appointment</description>
        <inlineHelpText>Time of Call or Appointment</inlineHelpText>
        <label>Call or Appt. Time</label>
        <picklist>
            <picklistValues>
                <fullName>5:00am-7:59am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00am-10:59am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00am-1:59pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00pm-4:59pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00pm-7:59pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00pm-10:59pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CardIndex__c</fullName>
        <description>Index for UI purposes</description>
        <label>CardIndex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Demonstration Teaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Followed-up on student&apos;s behalf (please note)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left Voicemail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please note)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received Voicemail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Concern_Comments__c</fullName>
        <label>Concern Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Concerns__c</fullName>
        <label>Concerns</label>
        <picklist>
            <picklistValues>
                <fullName>Access to IT systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment Scheduling Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bursar&apos;s Office Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Mentoring Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrollment Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EWB / EWB Mentoring Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Aid Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grading Delays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grading Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Help Desk Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning / Program Communities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online or On-site Assessment Proctoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP Specialist Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Assistance Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Mentoring Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Services Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transcript Evaluation / Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGU Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGU Policy / Procedure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGU Transcripts / Records</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CreatedDateTimeForReports__c</fullName>
        <description>Formula field that shows the Activity.CreatedDate. This field can be used in formulas.</description>
        <formula>CreatedDate</formula>
        <label>Created Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EnrollmentCallTime__c</fullName>
        <description>Time that is selected from the Picklist in the flow</description>
        <label>Call Time</label>
        <picklist>
            <picklistValues>
                <fullName>06:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EnrollmentNoteType__c</fullName>
        <label>Enrollment Note Type</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Chat-Live Website Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LVM-Follow Up to Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LVM-Response to Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LVM-General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Email Address/Mailed Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ring No Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGA1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ININCallID__c</fullName>
        <description>Interactive Intelligence Call Center call ID.</description>
        <externalId>true</externalId>
        <label>ININ Call ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoteType__c</fullName>
        <label>Note Type</label>
        <picklist>
            <picklistValues>
                <fullName>Chat-Website Live Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LVM-- Follow up to Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LVM-- Response to Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LVM-- General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Email Address/ Mailed Material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ring No Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGA1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OriginType__c</fullName>
        <label>Origin Type</label>
        <picklist>
            <picklistValues>
                <fullName>Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <description>Result of the Task</description>
        <inlineHelpText>What was the Result of the Activity?</inlineHelpText>
        <label>Result</label>
        <picklist>
            <picklistValues>
                <fullName>First Call – Appt showed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Call - Appt no-showed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Call – General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Call – Student returned VM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up Call - Appt showed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up Call - Appt no-showed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up Call – General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow up Call – Student returned VM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intake - Appt showed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intake - Appt no-showed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intake - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intake – Student returned VM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voicemail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A – Or general questions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <description>SortOrder for Task List Displays</description>
        <label>SortOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <picklist>
            <picklistValues>
                <fullName>Background Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic Skills Exam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cohort Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Exam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discussed content detail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discussed current assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discussed next term goals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discussed OTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discussed term goals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discussed WGU / personal issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT Observations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT Placement / Cohort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT Placement Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT Timeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up/Recap from phone call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left instructions for assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offered support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please note)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCE I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCE II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCE Summary Task List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provided information on assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reminded Student of Timelines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reminded students of timeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested appt reschedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested a return call</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>TemplateId__c</fullName>
        <description>Id of template used to create the task or event, if any. Used in combination with TemplateObjectType</description>
        <label>TemplateId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateObjectType__c</fullName>
        <description>The SObjectType name for the object identified by Template Id, if any.</description>
        <label>TemplateObjectType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransferredTo__c</fullName>
        <description>Picklist field indicating which department a phone call was transferred to.</description>
        <label>Transferred To</label>
        <picklist>
            <picklistValues>
                <fullName>ADA Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bursar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hang Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Help Desk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orientation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refer a Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scholarships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taskstream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teacher Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transcript Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veteran Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawal Recovery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>BursarTasks</fullName>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>TASK.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Shadowen</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed,Waiting on someone else,Deferred,Deactivated</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>notEqual</operation>
            <value>11/21/2100 12:00 AM</value>
        </filters>
        <label>Bursar Tasks</label>
        <sharedTo>
            <role>Bursar</role>
            <role>BursarManager</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BursarTasksChase</fullName>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>TASK.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Shadowen</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed,Waiting on someone else,Deferred,Deactivated</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>11/21/2100 12:00 AM</value>
        </filters>
        <label>Bursar Tasks Chase</label>
        <sharedTo>
            <role>Bursar</role>
            <role>BursarManager</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CallTransfers</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TransferredTo__c</columns>
        <columns>TASK.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.CallTransfer</value>
        </filters>
        <filters>
            <field>TASK.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Call Transfers</label>
        <sharedTo>
            <group>StudentServices</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyOpenTasks</fullName>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>TASK.LAST_UPDATE_DATE_ONLY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
        </filters>
        <label>My Open Tasks</label>
    </listViews>
    <listViews>
        <fullName>MyTasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>TASK.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>My Tasks</label>
    </listViews>
    <listViews>
        <fullName>QualityAssuranceOpenTasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FULL_NAME</field>
            <operation>equals</operation>
            <value>Ashley Briggs</value>
        </filters>
        <label>Quality Assurance Open Tasks</label>
        <sharedTo>
            <roleAndSubordinatesInternal>AssistantRegistrar</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ROTeamOpenTasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>RO - Team Open Tasks</label>
        <sharedTo>
            <group>Records</group>
            <group>RecordsAuditors</group>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TS_Open_Tasks_all1</fullName>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>TASK.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.WHAT_NAME</field>
            <operation>contains</operation>
            <value>Concern,observation</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed,Inbound Email</value>
        </filters>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.EmployeeTask</value>
        </filters>
        <label>TS Open Tasks-ALL</label>
        <sharedTo>
            <group>SRMSupport</group>
            <group>TeacherSuccess</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>TransferredCalls</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>TransferredTo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.CallTransfer</value>
        </filters>
        <filters>
            <field>TASK.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Transferred Calls</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Registrar</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>StudentServicesDirector</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
</CustomObject>